--- a/main.css
+++ b/main.css
@@ -34,6 +34,13 @@ h1{
     outline: none;
     flex: 1;
 }
+.enter{
+    padding: 5px 10px; 
+    background-color: rgb(0, 132, 255);
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+}
 .collection{
     margin-top: 25px;
 
