--- a/main.css
+++ b/main.css
@@ -43,7 +43,12 @@ h1{
 }
 .collection{
     margin-top: 25px;
-
+}
+.collection button{
+    padding: 5px 15px;
+    border: none;
+    background-color: chocolate;
+    border-radius: 10px;
 }
 .list{
     margin-top: 3px;
@@ -51,6 +56,8 @@ h1{
     border-radius: 10px;
     padding: 5px;
     color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 .btn{
     display: block;
@@ -60,3 +67,18 @@ h1{
     border-radius: 10px;
     font-size: 20px;
 }
+.clear-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+  
+.clear-btn:hover {
+    background-color: #c82333;
+}
+
